Add endpoint to retrieve all pizza available, update tests,sql scripts and README
